force-app/main/default/objects/Faturamento__c/Faturamento__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado para o definir o faturamento.</description>
    <label>Faturamento</label>
    <nameField>
        <label>Nome de Faturamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faturamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>