force-app/main/default/objects/Faturamento__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar faturamento a casos.</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Faturamentos</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>