force-app/main/default/objects/Faturamento__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para associar Faturamento ao Cliente.</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturamentos</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>