force-app/main/default/objects/Faturamento__c/fields/IdExternoCliente__c.field-meta.xml
<CustomField>
    <fullName>IdExternoCliente__c</fullName>
    <description>Campo para guardar o Id Externo do Cliente passado via integração, e poder buscar via código o registro de Cliente correspondente.</description>
    <label>Id Externo do Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>