force-app/main/default/objects/Faturamento__c/fields/IdExternoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>IdExternoOportunidade__c</fullName>
    <label>Id Externo Oportunidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>