force-app/main/default/objects/Faturamento__c/fields/Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Instalacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar faturamento a instalação.</description>
    <label>Instalação</label>
    <referenceTo>Instalacao__c</referenceTo>
    <relationshipLabel>Faturamentos</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>