force-app/main/default/objects/Faturamento__c/fields/NumeroNota__c.field-meta.xml
<CustomField>
    <fullName>NumeroNota__c</fullName>
    <label>Número da Nota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>