force-app/main/default/objects/Faturamento__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Faturamentos</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>