force-app/main/default/objects/Faturamento__c/fields/Projeto__c.field-meta.xml
<CustomField>
    <fullName>Projeto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar faturamento a projetos.</description>
    <label>Projeto</label>
    <referenceTo>Projeto__c</referenceTo>
    <relationshipLabel>Faturamentos</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>