force-app/main/default/objects/Faturamento__c/listViews/TodosFaturamentos.listView-meta.xml
<ListView>
    <fullName>TodosFaturamentos</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os Faturamentos</label>
</ListView>